# flow

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
flow-ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
flow-ui/src/: App.svelte  app.css  app.d.ts  main.ts  reset.css  system-ui.svelte  system.css
flow-ui/src/components/: card.svelte  percentage.svelte  switch.svelte  tooltip.svelte
flow-ui/src/components/charts/: doughnut.svelte  index.ts
flow-ui/src/components/icons/: close.svelte  index.ts  moon.svelte  sun.svelte
flow-ui/src/lib/: types.ts
flow-ui/src/lib/events/: index.ts
flow-ui/src/lib/store/: theme.ts  tooltip.ts
flow-ui/src/lib/utils/: dom.ts
flow-ui/src/services/: index.ts  projects.ts  task.ts
flow-ui/src/ui/: analysis.svelte  nav.svelte
flow-ui/src/ui/analysis/: analysis.svelte  details.svelte  project-details.svelte  task-info.svelte
flow_api/: Cargo.toml
flow_api/src/: lib.rs
flow_api/src/routes/: mod.rs
flow_data/: Cargo.toml
flow_data/src/: data.rs  directory.rs  lib.rs  project.rs  task.rs
flow_data/src/db/: mod.rs  project_model.rs  queries.rs  task_model.rs
flow_data/src/db/project/: mod.rs  project_utils.rs
flow_data/src/db/task/: mod.rs  task_utils.rs
flow_data/src/db/tests/: mod.rs
flow_data/src/utils/: mod.rs
src/: app_data.rs  cli.rs  constants.rs  db.rs  main.rs
src/api/: mod.rs
src/project/: config.rs  db_model.rs  mod.rs  project.rs
src/project/test/: mod.rs
src/project_cmd/: mod.rs
src/task/: db_model.rs  mod.rs  task.rs
src/task_cmd/: mod.rs
src/utils/: data.rs  directory.rs  mod.rs  test_utils.rs
src/utils/table/: mod.rs  row.rs  utils.rs
