[package]
name = "flowi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
clap_complete = "4.1.2"
crossterm = "0.26.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4.24"
directories = "5.0"
